--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>app work</h1>
+<h1><button (click)="isShow()">click to show category </button></h1>
 <hr>
-<app-category></app-category>
+<app-category *ngIf="isCategoryShow" [isCategoryShow]="isCategoryShow"></app-category >
