event and property binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1><button (click)="isShow()">click to show category </button></h1>
-<hr>
-<app-category *ngIf="isCategoryShow" [isCategoryShow]="isCategoryShow"></app-category >
+<div class="container">
+    <h1><button (click)="isShow()">click to show category </button></h1>
+    <hr>
+    <app-category *ngIf="isCategoryShow" [isCategoryShow]="isCategoryShow"></app-category >
+</div>
+
+
