--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,7 +1,7 @@
 <div>
     <table>
         <tr>
-            <td>Id</td>
+            <td>IdNo</td>
             <td>Namkeen Name</td>
             <td>Price</td>
         </tr>
